RESOLVED FIXED Bug 266937
Incorrect 'ch' unit value in vertical-rl/lr when text-orientation is not upright
https://bugs.webkit.org/show_bug.cgi?id=266937
Summary Incorrect 'ch' unit value in vertical-rl/lr when text-orientation is not upright
zalan
Reported 2023-12-29 16:15:36 PST
ssia
Attachments
Patch (10.53 KB, patch)
2023-12-29 16:27 PST, zalan
no flags
Patch (10.62 KB, patch)
2023-12-29 20:59 PST, zalan
no flags
[fast-cq]Patch (10.17 KB, patch)
2023-12-30 09:57 PST, zalan
no flags
zalan
Comment 1 2023-12-29 16:27:19 PST
zalan
Comment 2 2023-12-29 20:59:39 PST
zalan
Comment 3 2023-12-30 09:57:33 PST
Created attachment 469245 [details] [fast-cq]Patch
EWS
Comment 4 2023-12-30 11:45:48 PST
Committed 272536@main (c703662a90c4): <https://commits.webkit.org/272536@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469245 [details].
Radar WebKit Bug Importer
Comment 5 2023-12-30 11:46:14 PST
Tim Nguyen (:ntim)
Comment 6 2024-01-28 23:07:02 PST
*** Bug 196203 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 7 2024-01-28 23:07:24 PST
*** Bug 203333 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.