Cherry-pick c703662a90c4. rdar://120293590

Incorrect 'ch' unit value in vertical-rl/lr when text-orientation is not upright
    https://bugs.webkit.org/show_bug.cgi?id=266937

    Reviewed by Antti Koivisto.

    In case of vertical writing mode the primary font has the orientation value of 'vertical'.
    It ensures we get CJK rendering right in addition to other font dependent attributes like ideographic baseline.
    However when we render/measure non-CJK glyphs (non-upright mode), a horizontal font variant is used.
    This variant should also be used as the base for the 'ch' unit. It essentially means the we use the actual advance width
    as opposed to the 'height' of the '0' character.

    * LayoutTests/TestExpectations:
    * Source/WebCore/css/CSSPrimitiveValue.cpp:
    (WebCore::CSSPrimitiveValue::computeUnzoomedNonCalcLengthDouble):
    (WebCore::CSSPrimitiveValue::equalForLengthResolution):
    * Source/WebCore/platform/graphics/FontCascade.cpp:
    (WebCore::FontCascade::zeroWidth const):
    * Source/WebCore/platform/graphics/FontCascade.h:

    Canonical link: https://commits.webkit.org/272536@main

Canonical link: https://commits.webkit.org/272448.152@safari-7618-branch